index.css
html {
    font-family: Arial, sans-serif;
    scroll-behavior: smooth;
    scrollbar-width: thin;
    scrollbar-color: #888 #333;
    overflow-x: hidden;
}

body {
    margin: 0;
    overflow-x: hidden;
}

nav {
    padding-block: 10px;
    position: fixed;
    z-index: 1000;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: row;
    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgb(24, 24, 24) 80%, rgb(44, 44, 44) 100%);
    border-bottom: #fff 1px solid;
    width: 100vw;
}

ul {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: row;
}

ul a {
    margin: 0 10px;
    padding: 5px 10px;
    border-radius: 5px;
    background-color: #f0f0f0;
    transition: all 0.5s ease;
    text-decoration: none;
    color: #333;
    font-weight: bold;
}

ul a:hover {
    color: #fff;
    background-color: #525252;
    transform: scale(1.1);
    cursor: pointer;
}

#topButton {
    position: fixed;
    bottom: 15px;
    right: 15px;
    background-color: #333;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    display: block;
    transform: translateY(200%);
    transition: all 1s ease;
    background-image: url("./imgs/back-to-top.svg");
    background-size: cover;
    background-position: center;
    width: 40px;
    height: 40px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    z-index: 1000;
}

#topButton:hover {
    background-color: #525252;
    transform: scale(1.1);
}

#topButton.visible {
    transform: translateY(0);
}

#mainSection {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    align-content: center;
    justify-content: center;
    margin: 0;
    background-image: 
        linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 80%, rgba(0, 0, 0, 1) 100%), 
        url("./imgs/abstract-black-background-dynamic-black-landing-page_249611-4935.avif");
    background-size: cover;
    background-position: center;
    height: 100vh;
}

#info {
    transform: translateX(-25%);
    opacity: 0;
    position: relative;
    width: 50%;
    padding: 20px;
}

#info.loaded {
    opacity: 1;
    transform: translateX(0);
    transition: all 1s ease-in-out;
}

#info h1 {
    color: #fff;
    font-size: clamp(1.5rem, 7vw, 3.5rem);
    text-align: center;
}

#info p {
    color: #fff;
    font-size: clamp(0.7rem, 4vw, 1.5rem);
    text-align: center;
}

#profile {
    transform: translateX(25%);
    opacity: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 20px;
}

#profile img {
    width: 30vw;
    max-width: 150px;
    height: 30vw;
    max-height: 150px;
    border-radius: 50%;
    border: 2px solid #fff;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    transition: transform 1s ease;
}

#socials {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    margin-top: 10px;
}

#profile.loaded {
    opacity: 1;
    transform: translateX(0);
    transition: all 1s ease-in-out;
}

#socials a {
    margin: 0 10px;
    width: 7vw;
    max-width: 40px;
    height: 7vw;
    max-height: 40px;
    background-size: cover;
    background-position: center;
    transition: transform 1s ease;
}

#socials a:hover {
    transform: scale(1.1);
    cursor: pointer;
}

#github {
    background-image: url("./imgs/github.svg");
}

#linkedin {
    background-image: url("./imgs/linkedin.svg");
}

#strava {
    background-image: url("./imgs/strava-icon.svg");
}

#projects {
    display: flex;
    padding: 20px;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-image: linear-gradient(rgb(16, 16, 16) 0%, rgb(0, 0, 0) 10%, rgb(0, 0, 0) 90%, rgb(16, 16, 16) 100%);
    border-block: #fff 1px solid;
}

#projects h2 {
    color: #fff;
    font-size: clamp(1.5rem, 7vw, 3.5rem);
}

.project {
    background-color: #333;
    border-radius: 5px;
    padding: 20px;
    margin: 10px 0;
    width: 80%;
    max-width: 600px;
    text-align: center;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    opacity: 0;
    transition: all 1s ease-in-out;
}

.enterLeft {
    transform: translateX(-25%);
    margin-right: 35%;
}

.enterRight {
    transform: translateX(25%);
    margin-left: 35%;
}

@media (max-width: 970px) {
    .enterLeft {
        margin-right: 0;
    }

    .enterRight {
        margin-left: 0;
    }
}

.enterLeft.loaded, .enterRight.loaded {
    opacity: 1;
    transform: translateX(0);
    transition: all 0.5s ease-in-out;
}

.description {
    flex: 1;
}

.project h3 {
    color: #fff;
    font-size: clamp(1.2rem, 5vw, 2rem);
    margin-bottom: 0;
}

.project p {
    color: #fff;
    font-size: clamp(0.8rem, 3vw, 1.2rem);
}

.project img {
    width: 150px;
    min-width: 150px;
    border-radius: 5px;
    margin-inline: 10px;
}

@media screen and (max-width: 425px) {
    .project img {
        margin-inline: 100%;
    }
}


.project:hover {
    background-color: #444;
    cursor: pointer;
    transform: scale(1.05);
}

#aboutMe {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: black;
    padding: 20px 20px 40px 20px;
}

#aboutMe h2 {
    font-size: clamp(1.5rem, 7vw, 3.5rem);
    margin-bottom: 10px;
    color: #fff;
}

#aboutMe p {
    font-size: clamp(0.8rem, 3vw, 1.2rem);
    line-height: 1.5;
    color: #ccc;
}

